History of this buildout
========================

6.0.12 (unreleased)
-------------------

- Sort related items by reverse chronological order
  [diederik]


6.0.11 (2016-04-12)
-------------------

- MINA-137 various improvements, typo's and minor changes in displaying
  tiles.  [jladage]


- Sort the references in the referencesbrowserwidget reversed.  So
  make sure the most recently added item is shown first.  Issue
  MINA-136.  [maurits]



6.0.10 (2016-04-06)
-------------------

- Treat mailchimp as a one-time popup.  Do not look for a form in it
  to submit inline with ajax, as this has the side effect of
  swallowing the statusmessage cookie.  MINA-135.  [maurits]

- Enabled plonepopupforms.js in an upgrade step.  Needed to close the
  mailchimp popup after a success.  MINA-135.  [maurits]


6.0.9 (2016-04-06)
------------------

- Use PyPDF2 to generate PDF files for meetings.  Replace existing PDF
  if it is not from this new version.  This fixes a possible eternal
  loop for weird PDF files.  Fixes issue MINA-134.  [maurits]


6.0.8 (2016-04-05)
------------------

- We're good with __file__, so removing log entry again.  [jladage]


6.0.7.3 (2016-04-05)
--------------------

- Add log entry to see why the server can't find it, but locally it works fine.
  [jladage]


6.0.7.2 (2016-03-30)
--------------------

- Renamed old svg and placed new one with the baseline "Vlaanderen is omgevingsbewust".
  [lhuiskes]


6.0.7.1 (2016-03-24)
--------------------

- Just __file__ will work within migration.py.  [jladage]


6.0.7 (2016-03-24)
------------------

- Open faceted_criteria.xml with full path.  [jladage]


6.0.6 (2016-03-24)
------------------

- Move faceted_criteria.xml to Products.minaraad.  [jladage]


6.0.5 (2016-03-18)
------------------

- Update nodejs.cfg to our common work style.
  [lhuiskes]

- MINA-133, Add HTTPS_PROXY environment variabele, since this is
  required by the requests module when doing https requests.
