@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<object name="portal_workflow" meta_type="Plone Workflow Tool">
+ <property
+    name="title">Contains workflow definitions for your portal</property>
+ <object name="project_workflow" meta_type="Workflow"/>
+ <bindings>
+  <type type_id="Project">
+   <bound-workflow workflow_id="project_workflow"/>
+  </type>
+ </bindings>
+</object>
